# vector-datenbank-mit-qdrant

./: Qdrant IO.ipynb  R(AG) - Retrieval mit Qdrant für Augmented Generation.ipynb  docker-compose.yml  pyproject.toml
