[project]
name = "qdrant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.5",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
]
